2006-04-09  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/docgen/ODFDoc.py: Improve graphic alignment (Bug 1370498)
	* src/docgen/OpenOfficeDoc.py: Improve graphic alignment (Bug 1370498)
	* src/plugins/FamilyGroup.py: Fix traceback when no spouse exists.

2006-04-09  Alex Roitman  <shura@gramps-project.org>
	(GrampsBSDDB._delete_primary_from_reference_map): Accept txn
	argument; pass it on to self._remove_reference().
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB._do_remove_object):
	Work out both regular and batch transactions.

	* src/Makefile.am: Clean byte-compiled files.
	* src/DataViews/Makefile.am: Clean byte-compiled files.
	* src/GrampsDb/Makefile.am: Clean byte-compiled files.
	* src/Config/Makefile.am: Clean byte-compiled files.
	* src/RelLib/Makefile.am: Clean byte-compiled files.
	* src/Editors/Makefile.am: Clean byte-compiled files.
	* src/plugins/Makefile.am: Clean byte-compiled files.
	* src/ObjectSelector/Makefile.am: Clean byte-compiled files.
	* src/TreeViews/Makefile.am: Clean byte-compiled files.
	* src/Models/Makefile.am: Clean byte-compiled files.
	* src/Mime/Makefile.am: Clean byte-compiled files.
	* src/GrampsLogger/Makefile.am: Clean byte-compiled files.
	* src/PluginUtils/Makefile.am: Clean byte-compiled files.
	* src/docgen/Makefile.am: Clean byte-compiled files.
	* src/DateHandler/Makefile.am: Clean byte-compiled files.

2006-04-09  Don Allingham  <don@gramps-project.org>
	* src/plugins/*: bring up to ManagedWindow

2006-04-07  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: remove empty families

2006-04-07  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/docgen/PdfDoc.py: fix columns, error check images
	* src/docgen/RTFDoc.py: error check images

2006-04-07  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: Fix call to EditName, pylint fixes

2006-04-06  Don Allingham  <don@gramps-project.org>
	* src/glade/gramps.glade: restored addr_edit